--- a/Projects/梦飞翔队/static/index.html
+++ b/Projects/梦飞翔队/static/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://cdn.ronghub.com/RongIMLib-3.0.5-dev.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="index.js"></script>
     <title>Document</title>
 </head>
 
 <body>
     <h2>测试</h2>
-    <script>
-        $.getJSON('/getappkey').then((data)=>console.log(data));
-    </script>
 </body>
 
 </html>
