消息发送测试

--- a/Projects/梦飞翔队/static/index.html
+++ b/Projects/梦飞翔队/static/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://cdn.ronghub.com/RongIMLib-3.0.5-dev.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
     <title>Document</title>
 </head>
 
 <body>
     <h2>测试</h2>
+    <input type="text" id="text">
+    <input type="button" id="send" value="发送">
+    <input type="button" id="test" value="测试">
 </body>
 
 </html>
