用户加入逻辑

--- a/Projects/北城/static/index.html
+++ b/Projects/北城/static/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <h2>anonychat</h2>
-    <p>等待对手...</p>
-    <input type="button" id="send" value="测试">
+    <p id="info">等待其他用户加入...</p>
+    <input type="text" name="inputmessage" id="inputmessage">
+    <input type="button" id="send" value="发送">
 </body>
 
 </html>
