--- a/Projects/北城/static/index.html
+++ b/Projects/北城/static/index.html
@@ -6,13 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="http://cdn.ronghub.com/RongIMLib-3.0.5-dev.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="index.js" defer></script>
+    <style>
+        .message {
+            word-break: break-all;
+            position: relative;
+            /* width: 150px; */
+            background: #F8C301;
+            border-radius: 5px;
+            margin: 8px 32px;
+            padding: 0.5em;
+        }
+
+        .message p {
+            margin: 0;
+        }
+
+        .message .arrow {
+            position: absolute;
+            top: 8px;
+            left: -16px;
+            width: 0;
+            height: 0;
+            border: solid 8px;
+            border-color: #4D494800 #F8C301 #4D494800 #4D494800;
+        }
+
+        .message .arrow.right {
+            left: auto;
+            right: -16px;
+            border-color: #4D494800 #4D494800 #4D494800 #F8C301;
+        }
+    </style>
     <title>anonychat</title>
 </head>
 
 <body>
     <h2>anonychat</h2>
     <p id="info">等待其他用户加入...</p>
+    <div id="messagelist" style="height:480px;width:480px;overflow:auto;background:red;">
+        <div class="message">
+            <div class="arrow"></div>
+            <p>22222222</p>
+        </div>
+        <div class="message">
+            <div class="arrow right"></div>
+            <p>22222222</p>
+        </div>
+    </div>
     <input type="text" name="inputmessage" id="inputmessage">
     <input type="button" id="send" value="发送">
 </body>
