史上第一lj吐槽***

--- a/Projects/Altgo/chat.html
+++ b/Projects/Altgo/chat.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>todo 提醒</title>
+      <title>一起来吐槽！！！</title>
       <meta name="renderer" content="webkit" />
       <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
       <script src="http://cdn.ronghub.com/RongIMLib-3.0.7-dev.js"></script>
