--- a/Projects/franxx/static/index.html
+++ b/Projects/franxx/static/index.html
@@ -24,6 +24,10 @@
                 <input type="text">
                 <input type="button" value="删除" onclick="this.parentElement.remove();">
             </div>
+            <div class="option">
+                <input type="text">
+                <input type="button" value="删除" onclick="this.parentElement.remove();">
+            </div>
         </div>
         <input type="button" value="增加" onclick="addoption();">
         <input type="button" value="提交" onclick="submit();">
