五子棋基本完成

--- a/Projects/biu/static/index.html
+++ b/Projects/biu/static/index.html
@@ -13,8 +13,7 @@
 <body>
     <h2>五子棋</h2>
     <canvas id="board" width="400" height="400"></canvas>
-    <p>等待对手...</p>
-    <input type="button" id="start" value="开始">
+    <p id="status">等待对手...</p>
 </body>
 
 </html>
