--- a/Projects/北城/static/index.html
+++ b/Projects/北城/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://cdn.ronghub.com/RongIMLib-3.0.5-dev.js"></script>
+    <script src="https://cdn.ronghub.com/RongIMLib-3.0.5-dev.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="index.js" defer></script>
