--- a/Projects/点兔万岁/static/index.html
+++ b/Projects/点兔万岁/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://cdn.ronghub.com/RongIMLib-3.0.5-dev.js"></script>
+    <script src="https://cdn.ronghub.com/RongIMLib-3.0.5-dev.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="index.js" defer></script>
     <title>tic-tac-toe</title>
@@ -13,7 +13,7 @@
 <body>
     <h2>tic-tac-toe</h2>
     <canvas id="board" width="400" height="400"></canvas>
-    <p>等待对手...</p>
+    <p id="status">等待对手...</p>
     <input type="button" id="send" value="测试">
 </body>
 
