--- a/Projects/youweyoung/public/index.html
+++ b/Projects/youweyoung/public/index.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>IYI在线剧院——影音娱乐新体验,好剧不停歇</title>
   <link rel="stylesheet" href="./reset.css">
   <!-- 未压缩版 -->
   <script src="https://cdn.ronghub.com/RongIMLib-2.5.9.js"></script>
   <!-- 压缩版 -->
   <script src="https://cdn.ronghub.com/RongRTC-3.2.4.min.js"></script>
   <script src="https://cdn.bootcdn.net/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
-  <script src="./lib/dragonbones.min.js"></script> 
+  <script src="./lib/dragonBones.min.js"></script> 
 </head>
 
 <body>
