--- a/Projects/franxx/static/index.html
+++ b/Projects/franxx/static/index.html
@@ -12,12 +12,14 @@
 
 <body>
     <h2>ivote</h2>
-    <h4>创建/参与投票</h4>
-    <p>输入投票id</p>
-    <input type="text" name="voteinput" id="voteinput">
-    <input type="button" onclick="getvote();" value="投票">
-    <h4>创建投票</h4>
+    <div id="tovote">
+        <h4>参与投票</h4>
+        <p>输入投票id</p>
+        <input type="text" name="voteinput" id="voteinput">
+        <input type="button" onclick="getvote();" value="投票">
+    </div>
     <div id="create">
+        <h4>创建投票</h4>
         <p>投票标题</p>
         <input type="text" name="title" id="title">
         <p>投票选项</p>
@@ -37,8 +39,6 @@
     <div id="result">
         <h4>投票结果</h4>
         <div id="resultlist">
-            <div>选项1</div>
-            <div>选项2</div>
         </div>
     </div>
     <div id="dovote">
