修复token问题 完成

--- a/Projects/梦飞翔队/static/index.html
+++ b/Projects/梦飞翔队/static/index.html
@@ -50,6 +50,10 @@
         .btn-colorful:focus {
             box-shadow: 0 0 0 0.2rem #007bff80;
         }
+
+        body {
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -58,7 +62,7 @@
     <div class="canvas"></div>
     <input type="text" class="colorful" id="text">
     <input type="button" class="btn-colorful" id="send" value="发送">
-    <input type="button" class="btn-colorful" id="test" value="测试">
+    <!-- <input type="button" class="btn-colorful" id="test" value="测试"> -->
 </body>
 
 </html>
